gcc/testsuite/rust/rustc/ui/generics/unclosed-generics-in-impl-def_dg.rs
impl<S: Into<std::borrow::Cow<'static, str>> From<S> for Canonical {} // { dg-error "" "" { target *-*-* } }
fn main() {}

